tweaks here and there

--- a/.config/kitty/kitty.conf
+++ b/.config/kitty/kitty.conf
@@ -3,6 +3,6 @@ include ./cursor.conf
 include ./details.conf
 include ./layout.conf
 include ./tabbar.conf
-include ./themes/gruvbox.conf
+include ./themes/onedark.conf
 include ./keybindings.conf
 
